# rest3d

./: .gitignore  .podhook  LICENSE.md  README.md  package.json
.openshift/action_hooks/: build  deploy  pre_build
.openshift/lib/: add_local_bin_to_path
.openshift/markers/: README
database/: README.md
database/baseX/: README.md  assets.xml  assets.xql  basexclient.bat  basexclient.sh  basexhttp.bat  basexhttp.sh  basexserver.bat  basexserver.sh  basexserverstop.bat  builder  client.sh  create_database_assets.macro  dotcouldclient.bat  run.sh  supervisord.conf  validate-collada.xql
database/eXist/: README.md  controller.xql  rest3D-FH-0.2.7.6.xar
server/: .gitignore  FRYS.com | LG.html  README.md  cp.js  diskcache.js  fileinfo.js  howto-debug-node.txt  package.json  pm2.json  rest3d-basex-server.js  rest3d-exists-server.js  rest3d-server.js  rmdir.js  sendfile.js  simple-server.js  static_server.js  upload.js  utils.js  warehouse.js
server/OpenGC/: README.md
server/gltf/: LICENSE.md
server/hook/: gltf-post-receive  post-receive  rest3d-post-receive
server/opengc/src/: CMakeLists.txt
server/opengc/src/opengc_common_lib/: CMakeLists.txt
server/opengc/src/opengc_common_lib/inc/: ogcAdjacencyInfo.h  ogcArithmeticCodec.h  ogcBinaryStream.h  ogcIndexedFaceSet.h  ogcSC3DMCEncodeParams.h  ogcVector.h  ogcVector.inl
server/opengc/src/opengc_common_lib/src/: ogcArithmeticCodec.cpp  ogcTriangleFans.cpp
server/opengc/src/opengc_decode_lib/: CMakeLists.txt
server/opengc/src/opengc_decode_lib/inc/: ogcTriangleListDecoder.h
server/opengc/src/opengc_decode_lib/src/: ogcTriangleListDecoder.cpp
server/opengc/src/opengc_encode_lib/: CMakeLists.txt
server/opengc/src/opengc_encode_lib/inc/: ogcSC3DMCEncoder.h
server/opengc/src/opengc_encode_lib/src/: ogcSC3DMCEncoder.cpp  ogcTriangleListEncoder.cpp
server/opengc/src/test/: CMakeLists.txt
server/opengc/src/test/src/: main.cpp
server/src/: 3dvia.js  asset.js  basex.js  basexdriver.js  collection.js  convert.js  copyFile.js  diskcache.js  existdb.js  existdbdriver.js  extend.js  fileinfo.js  handleerror.js  handler.js  handleresult.js  jobs.js  jobs_routes.js  passport.js  readdir.js  resource.js  sendfile.js  session.js  tojson.js  upload.js  utils.js  warehouse.js  zipfile.js
server/tests/: router.tests.js
server/x3dgc/: README.md
server/x3dgc/src/: CMakeLists.txt
server/x3dgc/src/test/: CMakeLists.txt
server/x3dgc/src/test/src/: main.cpp
server/x3dgc/src/x3dgc_common_lib/: CMakeLists.txt
server/x3dgc/src/x3dgc_common_lib/inc/: x3dgc_AdjacencyInfo.h  x3dgc_ArithmeticCodec.h  x3dgc_BinaryStream.h  x3dgc_Common.h  x3dgc_FIFO.h  x3dgc_IndexedFaceSet.h  x3dgc_SC3DMCEncodeParams.h  x3dgc_TriangleFans.h  x3dgc_Vector.h  x3dgc_Vector.inl
server/x3dgc/src/x3dgc_common_lib/src/: x3dgc_ArithmeticCodec.cpp  x3dgc_IndexedFaceSet.cpp  x3dgc_TriangleFans.cpp
server/x3dgc/src/x3dgc_decode_lib/: CMakeLists.txt
server/x3dgc/src/x3dgc_decode_lib/inc/: x3dgc_SC3DMCDecoder.h  x3dgc_TriangleListDecoder.h
server/x3dgc/src/x3dgc_decode_lib/src/: x3dgc_SC3DMCDecoder.cpp  x3dgc_TriangleListDecoder.cpp
server/x3dgc/src/x3dgc_encode_lib/: CMakeLists.txt
server/x3dgc/src/x3dgc_encode_lib/inc/: x3dgc_SC3DMCEncoder.h  x3dgc_TriangleListEncoder.h
server/x3dgc/src/x3dgc_encode_lib/src/: x3dgc_SC3DMCEncoder.cpp  x3dgc_TriangleListEncoder.cpp
static/: index.html  main.html  rest3d.css
static/gui/: cutLayout-test.html  cutLayout.js  gui.js  gui2-test.html  gui2.js  gui3.js  gui4.css  gui4.js  gui5.css  gui5.js  gui6-test.html  gui6.css  gui6.js
(+120 files in other folders)
